# AgoniaGame

./: .gitignore  AIBot.h  CMakeLists.txt  FirebaseFix.cpp  GameWindow.cpp  GameWindow.h  LobbyManager.cpp  LobbyManager.h  card.cpp  card.h  deck.cpp  deck.h  google-services.json  main.cpp  match.cpp  match.h  player.cpp  player.h  table.cpp
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/androidTest/java/com/agonia/game/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/agonia/game/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/agonia/game/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: AIBot.cpp  AIBot.h  FirebaseFix.cpp  FirebaseManager.h  GameWindow.cpp  GameWindow.h  LobbyManager.cpp  LobbyManager.h  card.cpp  card.h  deck.h  main.cpp  match.cpp  match.h  player.cpp  player.h  table.cpp  table.h  win32_icon.rc
